<resources>
    <string name="app_name">WatchTrack</string>
    <string name="shows_tab">Shows</string>
    <string name="movies_tab">Movies</string>
    <string name="colon"> : </string>
    <string name="default_time">00</string>
    <string name="default_num">1</string>
    <string name="season_text">"SEASON"</string>
    <string name="episode_number_text">"EPISODE"</string>
    <string name="episode_time_text">"EPISODE TIME"</string>
    <string name="title">TITLE</string>
    <string name="hours_label">HOURS</string>
    <string name="minutes_label">MINUTES</string>
    <string name="seconds_label">SECONDS</string>
    <string name="add_show_btn">ADD SHOW</string>
    <string name="fail_to_add_show">Could not add show.</string>
    <string name="success_add_show">Show successfully added.</string>
    <string name="fail_to_update_show">Could not update show.</string>
    <string name="success_update_show">Show successfully updated.</string>
    <string name="update_btn">Update</string>
    <string name="delete_label">Delete</string>
    <string name="add_season_desc">Add Season</string>
    <string name="subtract_season_desc">Subtract Season</string>
    <string name="add_episode_desc">Add Episode</string>
    <string name="subtract_episode_desc">Subtract Episode</string>
    <string name="confirm_delete_text">Selected items will be deleted</string>
    <string name="cancel_label">Cancel</string>
    <string name="select_all_label">Select All</string>
    <string name="add_movie_btn">Add Movie</string>
    <string name="time_label">TIME</string>
    <string name="fail_to_add_movie">Could not add movie.</string>
    <string name="success_add_movie">Movie successfully added.</string>
    <string name="fail_to_update_movie">Could not update movie.</string>
    <string name="success_update_movie">Movie successfully updated.</string>
    <string name="empty_shows_text">There are no shows saved.</string>
    <string name="empty_movies_text">There are no movies saved.</string>
</resources>