<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="show"
            type="com.example.watchtrack.database.Show"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/show_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/defaultText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:text="Breaking Bad" />

        <TextView
            android:id="@+id/season_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/season_text"
            app:layout_constraintEnd_toStartOf="@+id/season_num"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/show_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/season_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/season_label"
            app:layout_constraintTop_toTopOf="@+id/season_label"
            tools:text="222" />

        <TextView
            android:id="@+id/episode_num_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/episode_number_text"
            app:layout_constraintEnd_toStartOf="@+id/episode_num"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/show_title"
            app:layout_constraintTop_toBottomOf="@+id/season_label" />

        <TextView
            android:id="@+id/episode_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/episode_num_label"
            app:layout_constraintTop_toBottomOf="@+id/season_num"
            tools:text="222" />

        <TextView
            android:id="@+id/episode_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/episode_time_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hours"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/show_title"
            app:layout_constraintTop_toBottomOf="@+id/episode_num_label"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:fontFamily="@font/roboto"
            android:maxLength="3"
            android:text="@string/default_time"
            android:textAlignment="center"
            android:textColor="@color/defaultText"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/colon1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/episode_time_label"
            app:layout_constraintTop_toTopOf="@+id/episode_time_label" />

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/colon"
            android:textColor="@color/editField"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/minutes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hours"
            app:layout_constraintTop_toTopOf="@+id/episode_time_label" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:fontFamily="@font/roboto"
            android:maxLength="3"
            android:text="@string/default_time"
            android:textAlignment="center"
            android:textColor="@color/defaultText"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/colon2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/colon1"
            app:layout_constraintTop_toTopOf="@+id/episode_time_label" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/colon"
            android:textColor="@color/editField"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/seconds"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minutes"
            app:layout_constraintTop_toTopOf="@+id/episode_time_label" />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:fontFamily="@font/roboto"
            android:maxLength="3"
            android:text="@string/default_time"
            android:textAlignment="center"
            android:textColor="@color/defaultText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/colon2"
            app:layout_constraintTop_toTopOf="@+id/episode_time_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>